src/test/ui/c_ffi_pure.stderr
error[E0724]: `#[c_ffi_pure]` may only be used on foreign functions
  --> $DIR/c_ffi_pure.rs:5:1
   |
LL | #[c_ffi_pure] //~ ERROR `#[c_ffi_pure]` may only be used on foreign functions [E0724]
   | ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0724`.
